# idl0-firmware

./: .gitignore  CLA.md  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: cla.yml  firmware-release.yml
components/lsm6dso32x_STdC/: CMakeLists.txt  README.md  idf_component.yml  lsm6dso32x_reg.c  lsm6dso32x_reg.h
docs/: README.md
main/: CMakeLists.txt  ble_service.c  ble_service.h  device_id.c  device_id.h  diag_log.c  diag_log.h  digital_task.c  digital_task.h  gps_driver.c  gps_driver.h  gps_task.c  gps_task.h  hrm_task.c  hrm_task.h  idf_component.yml  idl0_config.c  idl0_config.h  idl0_format.c  idl0_format.h  imu_driver.c  imu_driver.h  imu_driver_i2c.c  imu_driver_i2c.h  imu_task.c  imu_task.h  led_status.c  led_status.h  main.c  mode_state.c  mode_state.h  ota.c  ota.h  pins.h  sd_logger.c  sd_logger.h  session.c  session.h  status.c  status.h  (+4 more)
test/: stubs.c  test_gps_nmea.c  test_idl0_format.c
